// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01. a) window prior to pre-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`01. b) window after pre-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`01. c) buffers after pre-buffer update 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 0",
    "productIndex": 0,
  },
  
  ----[UPDATED]----
  Object {
    "_id": "bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "New product title",
    "productIndex": 1,
  }
  ---[/UPDATED]----

,
  Object {
    "_id": "cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 2",
    "productIndex": 2,
  },
  Object {
    "_id": "defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 3",
    "productIndex": 3,
  },
  Object {
    "_id": "efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 4",
    "productIndex": 4,
  },
  Object {
    "_id": "fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 5",
    "productIndex": 5,
  },
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "2-gfedcba",
    "_updatedAt": "2017-06-02T11:59:00Z",
    "name": "Product 29",
    "productIndex": 29,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 34",
    "productIndex": 34,
  },
]
[=== /Post ===]

`;

exports[`02. a) window prior to post-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`02. b) window after post-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`02. c) buffers after post-buffer update 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 0",
    "productIndex": 0,
  },
  Object {
    "_id": "bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 1",
    "productIndex": 1,
  },
  Object {
    "_id": "cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 2",
    "productIndex": 2,
  },
  Object {
    "_id": "defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 3",
    "productIndex": 3,
  },
  Object {
    "_id": "efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 4",
    "productIndex": 4,
  },
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  
  ----[UPDATED]----
  Object {
    "_id": "fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T11:59:59Z",
    "name": "New product name",
    "productIndex": 5,
  }
  ---[/UPDATED]----

,
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "2-gfedcba",
    "_updatedAt": "2017-06-02T11:59:00Z",
    "name": "Product 29",
    "productIndex": 29,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 34",
    "productIndex": 34,
  },
]
[=== /Post ===]

`;

exports[`03. a) window prior to pre-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`03. b) window after pre-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`03. c) buffers after pre-buffer update 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 0",
    "productIndex": 0,
  },
  Object {
    "_id": "bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 1",
    "productIndex": 1,
  },
  Object {
    "_id": "cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 2",
    "productIndex": 2,
  },
  Object {
    "_id": "defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 3",
    "productIndex": 3,
  },
  Object {
    "_id": "efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 4",
    "productIndex": 4,
  },
  Object {
    "_id": "fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 5",
    "productIndex": 5,
  },
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "2-gfedcba",
    "_updatedAt": "2017-06-02T11:59:00Z",
    "name": "Product 29",
    "productIndex": 29,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  
  ----[UPDATED]----
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "New product title",
    "productIndex": 34,
  }
  ---[/UPDATED]----

,
]
[=== /Post ===]

`;

exports[`04. a) window prior to post-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`04. b) window after post-buffer update 1`] = `
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
`;

exports[`04. c) buffers after post-buffer update 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 0",
    "productIndex": 0,
  },
  Object {
    "_id": "bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 1",
    "productIndex": 1,
  },
  Object {
    "_id": "cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 2",
    "productIndex": 2,
  },
  Object {
    "_id": "defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 3",
    "productIndex": 3,
  },
  Object {
    "_id": "efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 4",
    "productIndex": 4,
  },
  Object {
    "_id": "fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 5",
    "productIndex": 5,
  },
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  
  ----[UPDATED]----
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:34Z",
    "name": "New product name",
    "productIndex": 21,
  }
  ---[/UPDATED]----

,
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "2-gfedcba",
    "_updatedAt": "2017-06-02T11:59:00Z",
    "name": "Product 29",
    "productIndex": 29,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 34",
    "productIndex": 34,
  },
]
[=== /Post ===]

`;

exports[`05. a) window prior to transition out of pre-buffer 1`] = `
Array [
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
]
`;

exports[`05. c) buffers after transition out of pre-buffer 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "2-gfedcba",
    "_updatedAt": "2017-06-02T11:59:00Z",
    "name": "Product 29",
    "productIndex": 29,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 34",
    "productIndex": 34,
  },
  Object {
    "_id": "3-fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 35",
    "productIndex": 35,
  },
  Object {
    "_id": "3-ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 36",
    "productIndex": 36,
  },
  Object {
    "_id": "3-hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 37",
    "productIndex": 37,
  },
  Object {
    "_id": "3-ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 38",
    "productIndex": 38,
  },
  Object {
    "_id": "3-jklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 39",
    "productIndex": 39,
  },
  Object {
    "_id": "3-mnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 42",
    "productIndex": 42,
  },
]
[=== /Post ===]

`;

exports[`06. a) window prior to transition out of post-buffer 1`] = `
Array [
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
]
`;

exports[`06. c) buffers after transition out of post-buffer 1`] = `
[=== Pre ===]
Array [
  Object {
    "_id": "fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 5",
    "productIndex": 5,
  },
  Object {
    "_id": "ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 6",
    "productIndex": 6,
  },
  Object {
    "_id": "hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 7",
    "productIndex": 7,
  },
  Object {
    "_id": "ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 8",
    "productIndex": 8,
  },
  Object {
    "_id": "jklmnopqrstuvwxyz",
    "_updatedAt": "2017-06-02T12:00:00Z",
    "name": "Product 9",
    "productIndex": 9,
  },
  Object {
    "_id": "2-zyxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:57Z",
    "name": "Product 10",
    "productIndex": 10,
  },
  Object {
    "_id": "2-yxwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:54Z",
    "name": "Product 11",
    "productIndex": 11,
  },
  Object {
    "_id": "2-xwvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:51Z",
    "name": "Product 12",
    "productIndex": 12,
  },
  Object {
    "_id": "2-wvutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:48Z",
    "name": "Product 13",
    "productIndex": 13,
  },
  Object {
    "_id": "2-vutsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:45Z",
    "name": "Product 14",
    "productIndex": 14,
  },
  Object {
    "_id": "2-utsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:42Z",
    "name": "Product 15",
    "productIndex": 15,
  },
  Object {
    "_id": "2-tsrqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:39Z",
    "name": "Product 16",
    "productIndex": 16,
  },
  Object {
    "_id": "2-srqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:36Z",
    "name": "Product 17",
    "productIndex": 17,
  },
  Object {
    "_id": "2-rqponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:33Z",
    "name": "Product 18",
    "productIndex": 18,
  },
  Object {
    "_id": "2-qponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:30Z",
    "name": "Product 19",
    "productIndex": 19,
  },
]
[=== /Pre ===]

[=== Window ===]
Array [
  Object {
    "_id": "2-ponmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:27Z",
    "name": "Product 20",
    "productIndex": 20,
  },
  Object {
    "_id": "2-onmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:24Z",
    "name": "Product 21",
    "productIndex": 21,
  },
  Object {
    "_id": "2-nmlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:21Z",
    "name": "Product 22",
    "productIndex": 22,
  },
  Object {
    "_id": "2-mlkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:18Z",
    "name": "Product 23",
    "productIndex": 23,
  },
  Object {
    "_id": "2-lkjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:15Z",
    "name": "Product 24",
    "productIndex": 24,
  },
]
[=== /Window ===]

[=== Post ===]
Array [
  Object {
    "_id": "2-kjihgfedcba",
    "_updatedAt": "2017-06-02T11:59:12Z",
    "name": "Product 25",
    "productIndex": 25,
  },
  Object {
    "_id": "2-jihgfedcba",
    "_updatedAt": "2017-06-02T11:59:09Z",
    "name": "Product 26",
    "productIndex": 26,
  },
  Object {
    "_id": "2-ihgfedcba",
    "_updatedAt": "2017-06-02T11:59:06Z",
    "name": "Product 27",
    "productIndex": 27,
  },
  Object {
    "_id": "2-hgfedcba",
    "_updatedAt": "2017-06-02T11:59:03Z",
    "name": "Product 28",
    "productIndex": 28,
  },
  Object {
    "_id": "3-abcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 30",
    "productIndex": 30,
  },
  Object {
    "_id": "3-bcdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 31",
    "productIndex": 31,
  },
  Object {
    "_id": "3-cdefghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 32",
    "productIndex": 32,
  },
  Object {
    "_id": "3-defghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 33",
    "productIndex": 33,
  },
  Object {
    "_id": "3-efghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 34",
    "productIndex": 34,
  },
  Object {
    "_id": "3-fghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 35",
    "productIndex": 35,
  },
  Object {
    "_id": "3-ghijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 36",
    "productIndex": 36,
  },
  Object {
    "_id": "3-hijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 37",
    "productIndex": 37,
  },
  Object {
    "_id": "3-ijklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 38",
    "productIndex": 38,
  },
  Object {
    "_id": "3-jklmnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 39",
    "productIndex": 39,
  },
  Object {
    "_id": "3-mnopqrstuvwxyz",
    "_updatedAt": "2017-05-31T12:06:40Z",
    "name": "Product 42",
    "productIndex": 42,
  },
]
[=== /Post ===]

`;
